# CARLsim6

./: CMakeLists.txt
carlsim/interface/inc/: carlsim.h
carlsim/interface/src/: carlsim.cpp
carlsim/kernel/inc/: snn.h  snn_datastructures.h
carlsim/kernel/src/: snn_cpu_module.cpp  snn_manager.cpp
carlsim/kernel/src/gpu_module/: snn_gpu_module.cu
carlsim/test/: stp.cpp
carlsim/testca3/: ca3cstp_taud.cpp
projects/: CMakeLists.txt
projects/CS6_conn_test_CSTP/: CMakeLists.txt  generate_config_state.cpp
projects/CS6_conn_test_CSTP/src/: main_CS6_conn_test_CSTP.cpp
projects/NoisyCurrent/: CMakeLists.txt  generate_config_state.cpp
projects/NoisyCurrent/src/: main_NoisyCurrent.cpp
projects/hello_world/scripts/: plot_spikes_simple.m
projects/spike_generator/src/: main_spike_generator.cpp
